[package]
name = "gomiatsume-ws"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tungstenite = "*"
futures = "0.3"
futures-util = "0.3.8"
futures-channel = "0.3"
tokio = { version = "0.3", features = ["full"] }
tokio-compat-02 = "0.1"
# tokio = { version = "0.3", features = ["macros", "fs", "sync", "io-std"] }
log = "0.4.0"
env_logger = "0.8.2"
# egg-mode = "0.15"
egg-mode = { git = "https://github.com/naari3/egg-mode.git", branch = "tokio-update-0.3.6" }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"